original colors applied to the navigation bar

--- a/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<div class="p-grid no-gutters">
+<div class="p-grid no-gutters navbar">
   <div class="p-col-12">
     <p-menubar [model]="items">
       <div class="p-d-inline-flex">QA4SM Validation Service</div>
