navigation bar icons enlarged

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -4709,7 +4709,8 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
 
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link .p-menuitem-icon {
   color: #FFDB5C;
-  margin-right: 0.5rem;
+  margin-right: 0.3rem;
+  font-size: 1.2rem;
 }
 
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link .p-submenu-icon {
