--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,53 +1,51 @@
 <link rel="stylesheet" href="home.component.scss">
 <main role="main">
   <div class="p-grid">
-    <div class="p-col-12">
-      <div>
-      <p-carousel [value]="CarouselImages" [circular]="true" [autoplayInterval]="5000" [numVisible]="1" [numScroll]="1">
-          <ng-template let-image pTemplate="item">
-            <img *ngIf="(image.plot|async) as plot"
-                 [src]="getSanitizedPlot(plot.plot)"
-                 class="carousel-img">
-            <div class="image-attribution" >
-              <a href="{{ image.link }}">{{ image.description }}</a>
-            </div>
-        </ng-template>
-      </p-carousel>
-      </div>
-      <div class="carousel-caption">
-        <div class="text mb-3">
-          <h1>Quality Assurance for Soil Moisture</h1>
-          <h3 class="carousel-desc d-none d-sm-block">
-            Validation of satellite soil moisture products <br/>
-            against in-situ and model reference data
-          </h3>
+    <div class="p-col-12 banner">
+      <div *ngIf="CarouselImages as CarouselImages">
+        <p-carousel [value]="CarouselImages" [circular]="true" [autoplayInterval]="5000" [numVisible]="1" [numScroll]="1">
+            <ng-template let-image pTemplate="item">
+              <img *ngIf="(image.plot|async) as plot"
+                   [src]="getSanitizedPlot(plot.plot)"
+                   class="carousel-img">
+              <div class="image-attribution" >
+                <a href="{{ image.link }}">{{ image.description }}</a>
+              </div>
+          </ng-template>
+        </p-carousel>
+        <div class="carousel-caption">
+          <div class="text mb-3">
+            <h1>Quality Assurance for Soil Moisture</h1>
+            <h3 class="carousel-desc d-none d-sm-block">
+              Validation of satellite soil moisture products <br/>
+              against in-situ and model reference data
+            </h3>
+          </div>
+          <span *ngIf="user_logged_in else elseBlock">
+            <p>
+            <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
+            <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
+            <a routerLink="/validate" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#validate" role="button">Try it</a>
+            </p>
+          </span>
+          <ng-template #elseBlock>
+            <p>
+            <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
+            <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
+            <a routerLink="/signup" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#signup" role="button">Sign up</a>
+            <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
+            <a routerLink="/login" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#login" role="button">Log in</a>
+            </p>
+          </ng-template>
         </div>
-      <span *ngIf="user_logged_in else elseBlock">
-        <p>
-        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
-        <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-        <a routerLink="/validate" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#validate" role="button">Try it</a>
-        </p>
-      </span>
-      <ng-template #elseBlock>
-        <p>
-        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
-        <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-        <a routerLink="/signup" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#signup" role="button">Sign up</a>
-        <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-        <a routerLink="/login" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#login" role="button">Log in</a>
-        </p>
-      </ng-template>
-    </div>
+      </div>
     </div>
   </div>
 
   <hr class="featurette-divider">
 
-  <div class="container-marketing">
-    <div class="p-grid">
+  <div class="container-marketing p-grid">
       <div class="p-md-5">
-
         <div *ngIf="settings$|async as settings">
           <div class="card news card-body">
             <h5 class="card-title">News</h5>
@@ -55,9 +53,7 @@
           </div>
         </div>
       </div>
-
       <div class="p-md-7">
-
         <div class="overflow">
           <div *ngFor="let logo of logos">
             <a *ngIf="(logo.plot|async) as plot" href="{{logo.link}}">
@@ -65,7 +61,6 @@
             </a>
           </div>
         </div>
-
         <h3 class="featurette-heading">Overview <span class="text-muted">QA4SM</span></h3>
         The Quality Assurance for Soil Moisture (<b>QA4SM</b>) service provides the user with:
         <ul class="list">
@@ -87,64 +82,55 @@
             style="max-width: 80%"/>
         </div>
       </div>
-
-  </div>
-
+    </div>
 
   <hr class="featurette-divider">
 
-  <div class="p-grid p-justify-center">
+  <div class="container-marketing p-grid p-justify-center">
     <div class="card-deck">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="text-center mt-0">Datasets and Settings</h4>
-          <p class="text-muted text-center" style="min-height: 3rem;">
-            Allows specification of input datasets and settings for your validation
-          </p>
+      <div class="card card-body">
+        <h4 class="text-center mt-0">Datasets and Settings</h4>
+        <p class="text-muted text-center" style="min-height: 3rem;">
+          Allows specification of input datasets and settings for your validation
+        </p>
 
-          <div *ngFor="let validate of ImgCardValidate">
-            <img *ngIf="(validate.plot|async) as plot"
-                 class="scaled_image img-screen"
-                 [src]="getSanitizedPlot(plot.plot)"
-                 (click)="showGallery(0, [plot])"
-                 [alt]="validate.description"/>
-          </div>
+        <div *ngFor="let validate of ImgCardValidate">
+          <img *ngIf="(validate.plot|async) as plot"
+               class="scaled_image img-screen"
+               [src]="getSanitizedPlot(plot.plot)"
+               (click)="showGallery(0, [plot])"
+               [alt]="validate.description"/>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-body">
-          <h4 class="text-center mt-0">Results</h4>
-          <p class="text-muted text-center" style="min-height: 3rem;">
-            Provides a list of all validation results
-          </p>
-          <div *ngFor="let validate of ImgCardValidateResult">
-            <img *ngIf="(validate.plot|async) as plot"
-                 class="scaled_image img-screen"
-                 [src]="getSanitizedPlot(plot.plot)"
-                 (click)="showGallery(0, [plot])"
-                 [alt]="validate.description"/>
-          </div>
+      <div class="card card-body">
+        <h4 class="text-center mt-0">Results</h4>
+        <p class="text-muted text-center" style="min-height: 3rem;">
+          Provides a list of all validation results
+        </p>
+        <div *ngFor="let validate of ImgCardValidateResult">
+          <img *ngIf="(validate.plot|async) as plot"
+               class="scaled_image img-screen"
+               [src]="getSanitizedPlot(plot.plot)"
+               (click)="showGallery(0, [plot])"
+               [alt]="validate.description"/>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-body">
-          <h4 class="text-center mt-0">Download and Visualize</h4>
-          <p class="text-muted text-center" style="min-height: 3rem;">
-            Allows download of validation results in netCDF format and as graphics
-          </p>
-          <div *ngFor="let details of ImgCardValidateDetails">
-            <img *ngIf="(details.plot|async) as plot"
-                 class="scaled_image img-screen"
-                 [src]="getSanitizedPlot(plot.plot)"
-                 (click)="showGallery(0, [plot])"
-                 [alt]="details.description"/>
-          </div>
+      <div class="card card-body">
+        <h4 class="text-center mt-0">Download and Visualize</h4>
+        <p class="text-muted text-center" style="min-height: 3rem;">
+          Allows download of validation results in netCDF format and as graphics
+        </p>
+        <div *ngFor="let details of ImgCardValidateDetails">
+          <img *ngIf="(details.plot|async) as plot"
+               class="scaled_image img-screen"
+               [src]="getSanitizedPlot(plot.plot)"
+               (click)="showGallery(0, [plot])"
+               [alt]="details.description"/>
         </div>
       </div>
     </div>
-  </div>
   </div>
 </main>
 
