--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,45 +1,48 @@
 <link rel="stylesheet" href="home.component.scss">
+
 <main role="main">
-  <div class="p-grid">
-    <div class="p-col-12 banner">
-      <div *ngIf="CarouselImages as CarouselImages">
-        <p-carousel [value]="CarouselImages" [circular]="true" [autoplayInterval]="5000" [numVisible]="1" [numScroll]="1">
-            <ng-template let-image pTemplate="item">
-              <img *ngIf="(image.plot|async) as plot"
-                   [src]="getSanitizedPlot(plot.plot)"
-                   class="carousel-img">
-              <div class="image-attribution" >
-                <a href="{{ image.link }}">{{ image.description }}</a>
-              </div>
-          </ng-template>
-        </p-carousel>
-        <div class="carousel-caption">
-          <div class="text mb-3">
-            <h1>Quality Assurance for Soil Moisture</h1>
-            <h3 class="carousel-desc d-none d-sm-block">
-              Validation of satellite soil moisture products <br/>
-              against in-situ and model reference data
-            </h3>
+  <div class="carousel">
+    <div *ngIf="CarouselImages as CarouselImages">
+      <p-carousel [value]="CarouselImages" [circular]="true" [autoplayInterval]="5000"
+                  [numVisible]="1" [numScroll]="1">
+        <ng-template let-image pTemplate="item">
+          <img *ngIf="(image.plot|async) as plot"
+               [src]="getSanitizedPlot(plot.plot)"
+               class="carousel-img">
+          <div class="image-attribution">
+            <a href="{{ image.link }}">{{ image.description }}</a>
           </div>
-          <span *ngIf="user_logged_in else elseBlock">
-            <p>
-            <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
-            <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-            <a routerLink="/validate" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#validate" role="button">Try it</a>
-            </p>
-          </span>
-          <ng-template #elseBlock>
-            <p>
-            <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
-            <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-            <a routerLink="/signup" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#signup" role="button">Sign up</a>
-            <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-            <a routerLink="/login" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#login" role="button">Log in</a>
-            </p>
-          </ng-template>
-        </div>
-      </div>
+        </ng-template>
+      </p-carousel>
     </div>
+    <div>
+      <div class="carousel-caption">
+        <div class="textbox mb-3">
+          <h1 class="carousel-desc">Quality Assurance for Soil Moisture</h1>
+          <h3 class="carousel-desc d-none d-sm-block">
+            Validation of satellite soil moisture products <br/>
+            against in-situ and model reference data
+          </h3>
+        </div>
+      <span *ngIf="user_logged_in else elseBlock">
+        <p>
+        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
+        <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
+        <a routerLink="/validate" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#validate" role="button">Try it</a>
+        </p>
+      </span>
+      <ng-template #elseBlock>
+        <p>
+        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
+        <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
+        <a routerLink="/signup" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#signup" role="button">Sign up</a>
+        <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
+        <a routerLink="/login" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#login" role="button">Log in</a>
+        </p>
+      </ng-template>
+    </div>
+    </div>
+
   </div>
 
   <hr class="featurette-divider">
