--- a/UI/src/app/pages/home/home.component.scss
+++ b/UI/src/app/pages/home/home.component.scss
@@ -24,13 +24,14 @@
 }
 
 .carousel-img>img {
-  min-width: 100%;
   margin: 0 auto;
 }
 
 .carousel-img {
   min-width: 100%;
   margin-bottom: 0.5rem;
+  max-width:100%;
+  max-height:100%;
 }
 
 .textbox>h3 {
