Convert Landing Page to Angular (#212)
* update version number

* Fixed issue with anomalies interval (#199)

* remove unused submodule

* cleaning up tests

* remove empty tests file

* fixing test

* bugfixes related to loading settings (#202)

* implement downtime counter

* update version and release-notes.md

* Update landing page

* Add first version of langing page

* some unnecessary code removed

* decoding improved, added function for serving a single plot file

* model added to be used as an object in carousel

* removed attributes which are not taken from the server

* a method for getting a single plot file added

* an approach changed; a model homepage-images-model is created and sent to html carousel

* first attribute changed from a list to a single plotDto element

* Update home page

* Add button to scroll up to all pages

* Cleanup html

* Update responsive design

* Clean up CSS

* some code refinement done

* carousel z-index = -1 set, so it doesn't cover a dropdown window

* some styling added so that pictures in carousel are displayed properly; if condition removed as it is not needed, variable name changed;

Co-authored-by: bakcsa <zoltan@bakcsa.hu>
Co-authored-by: s-scherrer <samuel.scherrer@geo.tuwien.ac.at>
Co-authored-by: sheenaze <monika.tercjak@gmail.com>

--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -11,13 +11,13 @@
         <tbody>
             <tr>
                 <td class="align-middle">
-                    <a *ngIf="logoTuWien$|async as logoTuWien" href="https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoTuWien[0].plot)"></a>
+                    <a *ngIf="logoTuWien$|async as logoTuWien" href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/" target="_blank"><img class="partner_logo" [src]="sanitizePlotUrl(logoTuWien[0].plot)"></a>
                 </td>
                 <td class="align-left">
                     <b>TU Wien (Vienna University of Technology)</b><br>
                     Department of Geodesy and Geoinformation<br>
                     Research Group Climate and Environmental Remote Sensing (CLIMERS)<br>
-                    Website: <a href="https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/">https://climers.geo.tuwien.ac.at/climers/projects/current-projects/qa4sm/</a><br>
+                    Website: <a href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/">https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/</a><br>
                     Contact: Wouter Dorigo (wouter.dorigo (at) tuwien.ac.at)<br>
                     Tasks: Scientific lead and research, dataset support
                 </td>
@@ -53,5 +53,6 @@
         QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm" target="_blank">It is available on GitHub.</a>
         This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}" target="_blank">version {{this.getAppVersion()}}</a>.
     </p>
-
+<qa-scroll-to-top></qa-scroll-to-top>
 </div>
+
