hrefs removed as they are not needed

--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -26,18 +26,18 @@
         </div>
       <span *ngIf="userLoggedIn else elseBlock">
         <p>
-        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
+        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0"  role="button">See results</a>
         <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-        <a routerLink="/validate" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#validate" role="button">Try it</a>
+        <a routerLink="/validate" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" role="button">Try it</a>
         </p>
       </span>
       <ng-template #elseBlock>
         <p>
-        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#published-validations" role="button">See results</a>
+        <a routerLink="/published-validations" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" role="button">See results</a>
         <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-        <a routerLink="/signup" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#signup" role="button">Sign up</a>
+        <a routerLink="/signup" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" role="button">Sign up</a>
         <span class="mx-1 mx-md-3 carousel-desc d-none d-sm-inline">or</span>
-        <a routerLink="/login" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" href="#login" role="button">Log in</a>
+        <a routerLink="/login" style="width: 7em;" class="btn btn-lg btn-primary mb-1 mb-md-0" role="button">Log in</a>
         </p>
       </ng-template>
     </div>
