--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -108,7 +108,7 @@
 
       <!--      Anomalies-->
       <div class="p-col-12">
-        <qa-anomalies [methodForValidation]="validationModel.anomalies"></qa-anomalies>
+        <qa-anomalies [anomaliesModel]="validationModel.anomalies"></qa-anomalies>
       </div>
 
       <!--      Scaling-->
