--- a/UI/src/app/modules/metrics/components/metric/metric.component.html
+++ b/UI/src/app/modules/metrics/components/metric/metric.component.html
@@ -1,6 +1,7 @@
 <div class="p-grid">
   <div class="p-col-12">
-    <p-checkbox [label]="metricModel.description" [(ngModel)]="metricModel.value" [binary]="true"
+    <p-checkbox [label]="metricModel.description" [ngModel]="metricModel.value$|async"
+                (ngModelChange)="metricModel.value$.next($event)" [binary]="true"
     ></p-checkbox>
     <label class="p-panel-header-icon"
            pTooltip="{{metricModel.helperText}}"
