--- a/UI/src/style.variables.scss
+++ b/UI/src/style.variables.scss
@@ -1,1 +1,2 @@
 $base-color: #00AAE3;
+$base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
