page 'about' styled

--- a/UI/src/app/pages/about/about.component.scss
+++ b/UI/src/app/pages/about/about.component.scss
@@ -1,4 +1,5 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+//@import "~bootstrap/dist/css/bootstrap.css";
+@import "src/style.variables";
 
 .align-middle {
     width: 10%;
@@ -17,4 +18,58 @@
 #logo_ffg {
     height: 6rem;
     float: right;
+}
+main {
+  text-align: left;
+  max-width: 40rem;
+  width: 100%;
+  margin: auto;
+  font-family: $base-font;
+  line-height: 1.5rem;
+}
+a {
+  color: #4760E5;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #213FE0;
+  text-decoration: underline;
+}
+
+#introduction{
+  text-align: justify;
+  margin-bottom: 1rem;
+}
+#footer{
+  text-align: justify;
+}
+
+.table{
+  width:100%;
+  margin-bottom:1rem;
+  color:#212529;
+  border-collapse: collapse !important;
+}
+
+.table td,.table th{
+  padding: .75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+
+.table thead th{
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+.table tbody+tbody{
+  border-top: 2px solid #dee2e6;
+}
+
+.align-middle{
+  vertical-align: middle!important;
+}
+.font-weight-bold {
+  font-weight: 700 !important;
 }
