div changed to main, bootstrap removed, global styling loaded

--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -1,5 +1,4 @@
-<div id="top" style="text-align: left; max-width: 40rem; width: 100%; margin: auto;">
-
+<main id="top">
   <p>
     <a pageScroll [pageScrollDuration]="1" href="#terms-and-conditions">Terms and Conditions</a><br/>
     <a pageScroll [pageScrollDuration]="1" href="#references">References</a><br/>
@@ -127,7 +126,6 @@
     </li>
   </ol>
 
-  <!--  <a pageScroll [pageScrollDuration]="1" href="#top">Back to top</a>-->
   <qa-scroll-to-top></qa-scroll-to-top>
 
-</div>
+</main>
