New UI styling (#213)
* printing removed

* original colors applied to the navigation bar

* navigation bar icons enlarged

* p-panel edited

* z-index = 0 set, otherwise links don't work

* hrefs removed as they are not needed

* base font family added

* page 'about' styled

* help page styled, bootstrap import removed, images loaded with base64

* common styling moved to a global file

* sorting added so that there is always the same order in the table; styling added

* div changed to main, bootstrap removed, global styling loaded

--- a/UI/src/app/pages/about/about.component.scss
+++ b/UI/src/app/pages/about/about.component.scss
@@ -1,4 +1,5 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+//@import "~bootstrap/dist/css/bootstrap.css";
+@import "src/style.variables";
 
 .align-middle {
     width: 10%;
@@ -17,4 +18,15 @@
 #logo_ffg {
     height: 6rem;
     float: right;
+}
+main {
+  max-width: 40rem;
+}
+
+#introduction{
+  text-align: justify;
+  margin-bottom: 1rem;
+}
+#footer{
+  text-align: justify;
 }
