--- a/UI/src/style.variables.scss
+++ b/UI/src/style.variables.scss
@@ -1,1 +1,112 @@
 $base-color: #00AAE3;
+$base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+
+main{
+  text-align: left;
+  width: 100%;
+  margin: auto;
+  font-family: $base-font;
+  line-height: 1.5rem;
+}
+
+a {
+  color: #4760E5;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #213FE0;
+  text-decoration: underline;
+}
+
+h1, h2, .h3, .h4 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+.h3 {
+  font-size: 1.75rem;
+}
+
+.h4 {
+  font-size: 1.5rem;
+}
+
+.font-weight-normal {
+  font-weight: 400 !important;
+}
+
+
+.table{
+  width:100%;
+  margin-bottom:1rem;
+  color:#212529;
+  border-collapse: collapse !important;
+}
+
+.table td,.table th{
+  padding: .75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+
+.table thead th{
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+.table tbody+tbody{
+  border-top: 2px solid #dee2e6;
+}
+
+.table-bordered {
+  border: 1px solid #dee2e6;
+}
+
+.table-bordered th,
+.table-bordered td {
+  border: 1px solid #dee2e6;
+}
+
+.table-bordered thead th,
+.table-bordered thead td {
+  border-bottom-width: 2px;
+}
+
+.table-bordered th,
+.table-bordered td {
+  border: 1px solid #dee2e6 !important;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.table .thead-dark th {
+  color: #fff;
+  background-color: #00AAE3;
+  border-color: #454d55;
+}
+
+.table .thead-dark th {
+  color: #ffffff;
+  border-color: #dee2e6;
+}
+
+.align-middle{
+  vertical-align: middle!important;
+}
+
+.font-weight-bold {
+  font-weight: 700 !important;
+}
